Adjusted formatting and some html in index

--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,10 @@
       Ross' FCC Header Parser Service
     </h1>
     <p>
-      This is a header parser service which will display the user's ipAddress, Language and browser / os information provided in the user's http request header when the user hits the /whoami endpoint hosted on this site. <a href="/whoami">Try it out!</a>
+      This is a header parser service which will display the user's ipAddress, Language and browser / os information provided in the user's http request header when the user hits the /whoami endpoint hosted on this site.
+      <h3>
+        <a href="/whoami">Try it out!</a>
+    </h3>
     </p>
 
     <footer>
